Changed out Jamaicanized background color, fixed spacing on render method

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -7,7 +7,7 @@
 @media all and (max-width: 800px) {
   .header-top, .header-top-logo, .header-top-nav-items {
     flex-direction: column;
-    background-color: green;
+    background-color: rgb(242, 242, 242);
     text-align: center;
   }
 }
@@ -27,13 +27,13 @@
   align-content: flex-start;
   font-size: 36pt;
   color: black;
-  background-color: purple;
+  background-color: rgb(242, 242, 242);
 }
 
 .header-top-nav-items {
   display: flex;
   margin: 0 auto;
-  background-color: green;
+  background-color: rgb(242, 242, 242);
 }
 
 .links {
@@ -45,8 +45,8 @@
   flex-grow: 1;
   align-self: center;
   list-style: none;
-  background-color: red;
-  margin: 10px;
+  background-color: rgb(242, 242, 242);
+  padding: 10px;
 }
 
 /* Bottom Header Stuff */
@@ -58,7 +58,7 @@
 }
 
 .header-bottom {
-  background-color: #BADA55;
+  background-color: rgb(242, 242, 242);
   display: flex;
   flex: 1 100%;
   color: black;
@@ -84,7 +84,7 @@
 .address-lookup-form {
   display: flex;
   flex: 0.25;
-  background-color: yellow;
+  background-color: rgb(242, 242, 242);
   flex-flow: column wrap;
   align-self: center;
 }
@@ -105,7 +105,7 @@
 /* Map Stuff */
 
 .map-container {
-  background-color: red;
+  background-color: rgb(242, 242, 242);
   text-align: center;
 }
 
@@ -117,9 +117,9 @@
 /* Footer Stuff */
 
 .details-top {
-  background-color: blue;
+  background-color: rgb(242, 242, 242);
 }
 
 .details-bottom {
-  background-color: pink;
+  background-color: rgb(242, 242, 242);
 }
